Package: R.matlab
=================

Version: 3.5.9-9000 [2015-07-03]
o The MatlabServer.m script now outputs verbose/debug messages to
  standard error (or more precisely MATLAB file #2) (Issue #27).
o Internal writeCommand() now gives an informative error if an
  unknown command is used.  Previously it silently sent a "0L"
  command to MATLAB.
o CLEANUP: Exporting only methods parts of the public API.
o ROBUSTNESS: Increased test coverage to 87% (was 73%).
o BUG FIX: writeMat() could not write logical elements.  They are
  now converted to integers as MATLAB does not have a native
  logical / boolean data type.  Previously, writeMat() silently
  ignored writing the data section of these logical elements
  resulting in a MAT file that could not be parsed by MATLAB
  (although readMat() could).  Thanks to Eugenio Piasini at
  University College London for reporting on this problem.


Version: 3.5.1 [2015-03-27]
o CRAN POLICIES/CLEANUP: Dropping reference to deprecated (soon defunct)
  utils::setInternet2() in help("Matlab").


Version: 3.5.0 [2015-03-05]
o ROBUSTNESS: Now readMat() parses (effectively skips) also objects of
  array class mxOPAQUE_CLASS (=17).  The official 'MAT-File Format R2015b'
  (Sept 2015) documentation does not describe this type.
  The parsing/skipping was done by reverse engineering and clever guesses.
  Thanks to GitHub user 'yakzan' for reporting on this type of MAT files.
o CLEANUP: Internal fallback method for reading compressed MAT files
  using Omegahat's Rcompression package is not needed since R 2.10.0 and
  therefore dropped.
o ROBUSTNESS: Package test coverage is 82%.


Version: 3.4.0 [2015-02-03]
o ROBUSTNESS: Now readMat() parses also functional objects of array
  type (class) 16.  Note that the official 'MAT-File Format R2015b'
  (Sept 2015) documentation does not describe this type.  I had to
  implement the parser based on best guess on how the MAT file format
  works in general, so it might not work in all cases.  Thanks to